2004-09-17  Paul Brook  <paul@codesourcery.com>

	* ld.texinfo: Rename arm-specific section.  Document --target*
	* emulparams/armelf_fbsd.sh: Set TARGET2_TYPE.
	* emulparams/armelf_linux.sh: Ditto.
	* emulparams/armelf_nbsd.sh: Ditto.
	* emultempl/armelf.em: Set default for TARGET2_TYPE.
	(target2_type): New variable.
	(arm_elf_before_allocation): Don't pass target1_type.
	(arm_elf_create_output_section_statements): New function.
	(PARSE_AND_LIST_PROLOGUE): Add OPTION_TARGET2.
	(PARSE_AND_LIST_LONGOPTS, PARSE_AND_LIST_OPTIONS): Add --target=.
	(PARSE_AND_LIST_ARGS_CASES): Handle OPTION_TARGET2.
	(LDEMUL_CREATE_OUTPUT_SECTION_STATEMENTS): Set.
	* emultempl/armelf_oabi.em (_before_allocation): Remove extra
	argument to bfd_elf32_arm_process_before_allocation.

2004-09-17  Alan Modra  <amodra@bigpond.net.au>

	* ldexp.c (fold_name): Update u.undef.next refs.
	* emultempl/pe.em: Likewise.
	* emultempl/sunos.em: Likewise.

2004-09-17  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* config.in: Regenerate.
	* configure: Regenerate.
	* aclocal.m4: Regenerate.
	* po/ld.pot: Regenerate.

2004-09-16  Tomer Levi  <Tomer.Levi@nsc.com>

	* scripttempl/elf32crx.sc (.init): Add KEEP for section's *personality*.
	(.fini): Likewise.
	(.jcr): Likewise.

2004-09-16  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/armelf_oabi.em (before_allocation): Add extra zero param
	to bfd_elf32_arm_process_before_allocation call.

2004-09-13  Paul Brook  <paul@codesourcery.com>

	* emulparams/armsymbian.sh: Set TARGET1_IS_REL.
	* emultempl/armelf.em: Use TARGET1_IS_REL.  Add --target1-{rel,abs}.

2004-09-07  H.J. Lu  <hongjiu.lu@intel.com>

	* configure: Regenerated with autconfig 2.13.

2004-09-07  Andreas Schwab  <schwab@suse.de>

	* ldexp.c (fold_binary) [DATA_SEGMENT_ALIGN]: Apply data segment
	alignment before adjusting DATA_SEGMENT_RELRO_END.

2004-09-06  Mark Mitchell  <mark@codesourcery.com>
